--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~3.5.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "express": "~3.5.0",
     "jade": "~1.3.0",
-    "stylus": "0.42.3",
-    "socket.io": "^0.9.16"
+    "morgan": "~1.0.0",
+    "socket.io": "^0.9.17",
+    "static-favicon": "~1.0.0",
+    "stylus": "0.42.3"
   }
 }
