--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "express": "~3.5.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "shortid": "^2.2.2",
+    "should": "^7.1.0",
     "socket.io": "^0.9.17",
+    "socket.io-client": "^1.3.6",
     "static-favicon": "~1.0.0",
     "stylus": "0.42.3"
   }
