--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
   },
   "dependencies": {
     "body-parser": "~1.0.0",
+    "chance": "^0.7.7",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~3.5.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "pm2": "^0.14.7",
     "shortid": "^2.2.2",
     "should": "^7.1.0",
     "socket.io": "^0.9.17",
-    "socket.io-client": "^1.3.6",
+    "socket.io-client": "^0.9.17",
     "static-favicon": "~1.0.0",
     "stylus": "0.42.3"
   }
